--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
     "three": "^0.85.2"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.1"
   }
 }
