--- a/package.json
+++ b/package.json
@@ -1,35 +1,64 @@
 {
   "name": "expo-three-orbit-controls",
-  "version": "1.0.1",
-  "description": "Orbit Controls for THREE.js on Expo",
+  "version": "2.0.0",
+  "description": "Universal Three.js Orbit Controls with Expo and React",
   "author": "Evan Bacon <baconbrix@gmail.com> (https://baconbrix.com/)",
+  "main": "build/OrbitControlsView.js",
+  "types": "build/OrbitControlsView.d.ts",
   "keywords": [
     "react",
     "native",
     "gestures",
     "expo",
-    "exponent",
     "three.js",
     "gl",
     "graphics",
     "opengl"
   ],
+  "files": [
+    "build"
+  ],
+  "homepage": "https://github.com/EvanBacon/expo-three-orbit-controls",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "expo-module build",
+    "clean": "expo-module clean",
+    "test": "expo-module test",
+    "lint": "expo-module lint",
+    "prepare": "expo-module prepare",
+    "prepublishOnly": "expo-module prepublishOnly",
+    "expo-module": "expo-module"
   },
-  "private": false,
-  "main": "index.js",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git@github.com:EvanBacon/expo-three-orbit-controls.git"
   },
   "devDependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
-    "three": "^0.85.2"
+    "@types/three": "^0.103.2",
+    "expo": "37.0.7",
+    "expo-gl": "^8.0.0",
+    "expo-three": "^5.5.1",
+    "expo-module-scripts": "^1.2.0",
+    "jest": "^25.1.0",
+    "jest-expo": "^37.0.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/unstable/sdk-37.tar.gz",
+    "react-native-web": "^0.11",
+    "three": "^0.108.0",
+    "eslint": "^6.8.0",
+    "prettier": "^1.19.1"
+  },
+  "peerDependencies": {
+    "expo": "^37.0.7",
+    "expo-gl": "^8.0.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "~0.61",
+    "react-native-web": "^0.11",
+    "three": "^0.108.0"
   },
   "dependencies": {
-    "prop-types": "^15.6.1"
+    "react-native-web-hooks": "^3.0.1"
   }
 }
