--- a/example/package.json
+++ b/example/package.json
@@ -1,20 +1,19 @@
 {
+  "main": "./node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "^37.0.0",
-    "expo-gl": "^8.0.0",
-    "expo-three": "^5.5.1",
-    "expo-three-orbit-controls": "^1.0.1",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/unstable/sdk-37.tar.gz",
-    "react-native-web": "0.11.7",
+    "expo": "^42.0.3",
+    "expo-gl": "^10.4.2",
+    "expo-three": "^5.7.0",
+    "expo-three-orbit-controls": "^2.0.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
+    "react-native": "~0.63.4",
+    "react-native-web": "~0.13.12",
     "react-native-web-hooks": "^3.0.1",
-    "three": "^0.117.1"
+    "three": "^0.132.2"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
-    "@types/react": "^16.8.23",
-    "@types/react-native": "^0.57.65",
-    "typescript": "^3.4.5"
+    "@types/react-native": "~0.63.2"
   }
 }
