--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,11 +1,5 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react-native",
-    "lib": ["dom", "esnext"],
-    "moduleResolution": "node",
-    "noEmit": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
-  }
+  },
+  "extends": "expo/tsconfig.base"
 }
