--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-three-orbit-controls",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Universal Three.js Orbit Controls with Expo and React",
   "author": "Evan Bacon <baconbrix@gmail.com> (https://baconbrix.com/)",
   "main": "build/OrbitControlsView.js",
@@ -34,29 +34,29 @@
     "url": "git@github.com:EvanBacon/expo-three-orbit-controls.git"
   },
   "devDependencies": {
-    "@types/three": "^0.103.2",
-    "expo": "37.0.7",
-    "expo-gl": "^8.0.0",
-    "expo-three": "^5.5.1",
-    "expo-module-scripts": "^1.2.0",
+    "@types/three": "^0.131.0",
+    "expo": "^42.0.3",
+    "expo-gl": "^10.4.2",
+    "expo-three": "^5.7.0",
+    "expo-module-scripts": "~2.0.0",
     "jest": "^25.1.0",
-    "jest-expo": "^37.0.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/unstable/sdk-37.tar.gz",
-    "react-native-web": "^0.11",
-    "three": "^0.108.0",
+    "jest-expo": "~42.1.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
+    "react-native": "~0.63.4",
+    "react-native-web": "~0.13.12",
+    "three": "^0.132.2",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1"
   },
   "peerDependencies": {
-    "expo": "^37.0.7",
-    "expo-gl": "^8.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "~0.61",
-    "react-native-web": "^0.11",
-    "three": "^0.128.0"
+    "expo": "^42.0.3",
+    "expo-gl": "^10.4.2",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
+    "react-native": "~0.63.4",
+    "react-native-web": "~0.13.12",
+    "three": "^0.132.2"
   },
   "dependencies": {
     "react-native-web-hooks": "^3.0.1"
